--- a/src/templates/project-post.module.css
+++ b/src/templates/project-post.module.css
@@ -27,7 +27,6 @@
 }
 
 .pagePadding {
-    background: var(--white);
     padding: 6rem 0rem 0rem 6rem;
     width: calc(100% - 12rem);
     height: auto;
@@ -102,7 +101,7 @@
 
 @media(max-width: 768px) {
     .pagePadding {
-        padding: 6rem 3rem;
+        padding: 8rem 3rem;
         width: calc(100% - 6rem);
     }
     .projectTitle {
